--- a/dmm/src/main/resources/static/scripts/app.json
+++ b/dmm/src/main/resources/static/scripts/app.json
@@ -2,6 +2,6 @@
     "appModuleName" : "dmmapp",
     "projectName" : "dmmapp",
     "projectContext" : "dmmapp",
-    "contextPath" : "/",
+    "contextPath" : "/dmmapp",
     "noAnalytics" : true
 }
