AB#1107425 Without Markup page implementation

--- a/dmm/src/main/resources/metadata/dmmapp-landing.json
+++ b/dmm/src/main/resources/metadata/dmmapp-landing.json
@@ -1,8 +1,9 @@
 {
-  "title": "Clinic Patients",
-  "breadcrumbTitle": "Clinic Patients",
+  "title": "Distributor Markup",
+  "breadcrumbTitle": "distributor markup",
   "filters": {
-    "org": "on"
+    "org": "on",
+    "help": "on"
   },
   "menuOptions": {
   },
@@ -11,6 +12,14 @@
     "deepLinkParams" : { }
   },
   "widgets": {
+ "withoutMarkup":{
+  "index" : 1,
+  "widgetData" : {},
+  "widgetProperties" : {
+    "label": "Select facilities Without Markup"
+  },
+  "widgetType" : "Button"
+ },
     "patientGrid": {
       "index": 1,
       "widgetBindings": {
@@ -27,6 +36,7 @@
         "noDataMessage": "There is no data"
       },
       "widgetType": "GridTable"
+
     }
   }
 }
