--- a/dmm/src/main/resources/metadata/dmmapp-landing.json
+++ b/dmm/src/main/resources/metadata/dmmapp-landing.json
@@ -1,9 +1,8 @@
 {
   "title": "Distributor Markup",
-  "breadcrumbTitle": "Distributor Markup",
+  "breadcrumbTitle": "Distributor Mark-up Manager",
   "filters": {
-    "orgFilter": "on",
-    "help": "on"
+
   },
   "menuOptions": {
   },
@@ -12,8 +11,95 @@
     "deepLinkParams" : { }
   },
   "widgets": {
-    "simpleContainer": {
-      "index" : 2,
+   "container1": {
+      "index" : 1,
+      "widgetData" : {},
+      "widgetProperties" : {},
+      "widgetType" : "SimpleContainer"
+    },
+      "orgFilter": {
+      "container": "container1",
+      "index": 1.3,
+      "widgetProperties": {
+        "promptLabel": "Parent Health System"
+      },
+
+      "widgetData": {
+        "fixtureUrl": "scripts/dmmapp/models/fixtures/orgFilterData.json",
+        "fixtures": true
+      },
+      "widgetType": "Select"
+    },
+      "helpIcon": {
+       "container": "container1",
+       "index" : 1.2,
+       "widgetData" : {},
+       "widgetProperties" : {
+       "icon": "question",
+       "aria-label": "question"
+  },
+  "widgetType" : "IconButton"
+  },
+      "help": {
+      "container": "container1",
+      "index": 1.1,
+      "widgetData": {},
+      "widgetProperties": {
+        "label": "Help",
+        "targetUrl": "https://distributormarkup.premierinc.com/content/SupplyChain/dmm-help/WebHelp/Content/Home.html"
+      },
+      "widgetType": "Button"
+    },
+   "infoContainer": {
+        "index" : 2,
+        "widgetData" : {},
+        "widgetProperties" : {},
+        "widgetType" : "SimpleContainer",
+     "widgetBindings": {
+       "infoClose": {
+         "event": "click",
+         "action": "hide"
+       }
+     }
+      },
+      "infoIcon": {
+      "index" : 2.1,
+      "container": "infoContainer",
+      "widgetData" : {},
+      "widgetProperties" : {
+        "icon": "info",
+        "aria-label": "info1"
+      },
+      "widgetType" : "IconButton"
+    },
+      "info": {
+      "container": "infoContainer",
+      "index" : 2.2,
+      "widgetData" : {},
+      "widgetProperties" : {
+        "iconClass": "glyphicon glyphicon-info",
+        "tagName": "p",
+        "color": "warning",
+        "children": [
+          {
+            "text": "To begin, select a Parent Health System from above list on the right."
+          }
+        ]
+      },
+      "widgetType" : "Text"
+    },
+      "infoClose": {
+        "container": "infoContainer",
+        "index" : 2.3,
+        "widgetData" : {},
+        "widgetProperties" : {
+          "icon": "close",
+          "aria-label": "info"
+        },
+        "widgetType" : "IconButton"
+      },
+   "simpleContainer": {
+      "index" : 3,
       "widgetBindings": {
         "orgFilter": [{
           "event": "change",
@@ -31,9 +117,9 @@
       },
       "widgetType" : "SimpleContainer"
     },
-    "managedFacilitiesList": {
+      "managedFacilitiesList": {
       "container": "simpleContainer",
-      "index" : 2.1,
+      "index" : 3.1,
       "widgetData" : {},
       "widgetProperties" : {
         "tagName": "p",
@@ -46,29 +132,30 @@
       },
       "widgetType" : "Text"
     },
-    "showFacilitiesWithoutMarkup": {
+      "showFacilitiesWithoutMarkup": {
       "container": "simpleContainer",
-      "index" : 2.4,
+      "index" : 3.4,
       "widgetData" : {},
       "widgetProperties" : {
-        "label": "Show Facilities without Markup"
-      },
-      "widgetType" : "Button"
-    },
-    "createMarkup": {
-      "container": "simpleContainer",
-      "index" : 2.3,
-      "widgetData" : {},
-      "widgetProperties" : {
-        "iconClass": "glyphicon glyphicon-plus",
-        "label": "Create Markup",
+        "label": "Show Facilities without Markup",
         "baseClass": "button-default"
       },
       "widgetType" : "Button"
     },
-    "showFilters": {
+      "createMarkup": {
       "container": "simpleContainer",
-      "index" : 2.2,
+      "index" : 3.3,
+      "widgetData" : {},
+      "widgetProperties" : {
+        "iconClass": "glyphicon glyphicon-plus",
+        "label": "Create New Markup",
+        "baseClass": "button-default"
+      },
+      "widgetType" : "Button"
+    },
+      "showFilters": {
+      "container": "simpleContainer",
+      "index" : 3.2,
       "widgetData" : {},
       "widgetProperties" : {
         "label": "Show Filters",
@@ -86,9 +173,9 @@
       },
       "widgetType" : "Button"
     },
-    "hideFilters": {
+      "hideFilters": {
       "container": "simpleContainer",
-      "index" : 2.2,
+      "index" : 3.2,
       "widgetData" : {},
       "widgetProperties" : {
         "hidden": "true",
@@ -107,8 +194,8 @@
       },
       "widgetType" : "Button"
     },
-    "container2": {
-      "index" : 3,
+   "container2": {
+      "index" : 4,
       "widgetData" : {},
       "widgetProperties" : {
         "hidden": "true"
@@ -125,9 +212,9 @@
         }
       }
     },
-    "entityCode": {
+      "entityCode": {
       "container": "container2",
-      "index": 3.1,
+      "index": 4.1,
       "widgetProperties": {
         "promptLabel": "Entity Code"
       },
@@ -137,9 +224,9 @@
       },
       "widgetType": "Select"
     },
-    "facility": {
+      "facility": {
       "container": "container2",
-      "index": 3.2,
+      "index": 4.2,
       "widgetProperties": {
         "promptLabel": "Facility"
       },
@@ -149,9 +236,9 @@
       },
       "widgetType": "Select"
     },
-    "distributor": {
+      "distributor": {
       "container": "container2",
-      "index": 3.3,
+      "index": 4.3,
       "widgetProperties": {
         "promptLabel": "Distributor"
       },
@@ -161,18 +248,18 @@
       },
       "widgetType": "Select"
     },
-    "clear": {
+      "clear": {
       "container": "container2",
-      "index" : 3.5,
+      "index" : 4.5,
       "widgetData" : {},
       "widgetProperties" : {
         "label": "Clear"
       },
       "widgetType" : "Button"
     },
-    "filterButton": {
+      "filterButton": {
       "container": "container2",
-      "index" : 3.4,
+      "index" : 4.4,
       "widgetData" : {},
       "widgetProperties" : {
         "label": "Filter",
@@ -180,29 +267,9 @@
       },
       "widgetType" : "Button"
     },
-    "begin": {
-      "index": 1,
-      "widgetData": {
-        "fixtureUrl": "scripts/dmmapp/models/fixtures/beginMessage.json",
-        "fixtures": true,
-        "serviceUrl": "services/your/service/here"
-      },
-      "widgetBindings": {
-        "orgFilter": [{
-          "event": "change",
-          "action": "hide",
-          "query": "id!=0"
-        }]
-      },
-      "widgetProperties": {
-        "border": "",
-        "title": "",
-        "dismissible": "true"
-      },
-      "widgetType": "Callout"
-    },
-    "managedFacilitiesListGrid": {
-      "index" : 3,
+
+   "managedFacilitiesListGrid": {
+      "index" : 4,
       "widgetData" : {
         "fixtureUrl": "scripts/dmmapp/models/fixtures/ag-grid-data-${orgFilter.id}.json",
         "fixtures": true,
@@ -235,23 +302,23 @@
               "field": "Entity Code",
               "cellClass": "hyperlink",
               "sortable": true,
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "Facility",
               "field": "Facility",
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "Distributor",
               "field": "Distributor",
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "Start Date",
               "field": "Start Date",
               "sortable": true,
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "End Date",
@@ -263,7 +330,7 @@
               "headerName": "Markup",
               "field": "Markup",
               "sortable": true,
-              "resizable": true
+              "resizable": false
             },
             {
             "headerName": "",
