AB#1107325 Landing page and view implementation

--- a/dmm/src/main/resources/metadata/dmmapp-landing.json
+++ b/dmm/src/main/resources/metadata/dmmapp-landing.json
@@ -89,12 +89,11 @@
       "widgetType" : "Text"
     },
       "infoClose": {
-        "container": "infoContainer",
         "index" : 2.3,
         "widgetData" : {},
         "widgetProperties" : {
           "icon": "close",
-          "aria-label": "info"
+          "aria-label": "info1"
         },
         "widgetType" : "IconButton"
       },
