--- a/dmm/src/main/resources/metadata/dmmapp-landing.json
+++ b/dmm/src/main/resources/metadata/dmmapp-landing.json
@@ -2,7 +2,7 @@
   "title": "Distributor Markup",
   "breadcrumbTitle": "Distributor Mark-up Manager",
   "filters": {
-
+    "container1": "on"
   },
   "menuOptions": {
   },
