AB#1107325 css modifications and orgFilter container added in filter...

--- a/dmm/src/main/resources/metadata/dmmapp-landing.json
+++ b/dmm/src/main/resources/metadata/dmmapp-landing.json
@@ -2,7 +2,10 @@
   "title": "Distributor Markup",
   "breadcrumbTitle": "Distributor Mark-up Manager",
   "filters": {
-    "container1": "on"
+    "container1": "on",
+    "orgFilter": "on",
+    "helpIcon": "on",
+    "help": "on"
   },
   "menuOptions": {
   },
