--- a/dmm/src/main/resources/metadata/dmmapp-landing.json
+++ b/dmm/src/main/resources/metadata/dmmapp-landing.json
@@ -1,10 +1,11 @@
 {
   "title": "Distributor Markup",
-  "breadcrumbTitle": "Distributor Markup",
+  "breadcrumbTitle": "Distributor Mark-up Manager",
   "filters": {
+    "container1": "on",
     "orgFilter": "on",
-    "help": "on",
-    "showFacilitiesWithoutMarkup": "on"
+    "helpIcon": "on",
+    "help": "on"
   },
   "menuOptions": {
   },
@@ -13,15 +14,114 @@
     "deepLinkParams" : { }
   },
   "widgets": {
-    "simpleContainer": {
+    "container1": {
       "index" : 1,
       "widgetData" : {},
       "widgetProperties" : {},
       "widgetType" : "SimpleContainer"
     },
+    "orgFilter": {
+      "container": "container1",
+      "index": 1.3,
+      "widgetProperties": {
+        "promptLabel": "Parent Health System"
+      },
+      "widgetData": {
+        "fixtureUrl": "scripts/dmmapp/models/fixtures/orgFilterData.json",
+        "fixtures": true
+      },
+      "widgetType": "Select"
+    },
+    "helpIcon": {
+      "container": "container1",
+      "index" : 1.2,
+      "widgetData" : {},
+      "widgetProperties" : {
+        "icon": "question",
+        "aria-label": "question"
+      },
+      "widgetType" : "IconButton"
+    },
+    "help": {
+      "container": "container1",
+      "index": 1.1,
+      "widgetData": {},
+      "widgetProperties": {
+        "label": "Help",
+        "targetUrl": "https://distributormarkup.premierinc.com/content/SupplyChain/dmm-help/WebHelp/Content/Home.htm"
+      },
+      "widgetType": "Button"
+    },
+    "infoContainer": {
+      "index" : 2,
+      "widgetData" : {},
+      "widgetProperties" : {},
+      "widgetType" : "SimpleContainer",
+      "widgetBindings": {
+        "infoClose": {
+          "event": "click",
+          "action": "hide"
+        }
+      }
+    },
+    "infoIcon": {
+      "index" : 2.1,
+      "container": "infoContainer",
+      "widgetData" : {},
+      "widgetProperties" : {
+        "icon": "info",
+        "aria-label": "info1"
+      },
+      "widgetType" : "IconButton"
+    },
+    "info": {
+      "container": "infoContainer",
+      "index" : 2.2,
+      "widgetData" : {},
+      "widgetProperties" : {
+        "iconClass": "glyphicon glyphicon-info",
+        "tagName": "p",
+        "color": "warning",
+        "children": [
+          {
+            "text": "To begin, select a Parent Health System from above list on the right."
+          }
+        ]
+      },
+      "widgetType" : "Text"
+    },
+    "infoClose": {
+      "container": "infoContainer",
+      "index" : 2.3,
+      "widgetData" : {},
+      "widgetProperties" : {
+        "icon": "close",
+        "aria-label": "info1"
+      },
+      "widgetType" : "IconButton"
+    },
+    "simpleContainer": {
+      "index" : 3,
+      "widgetData" : {},
+      "widgetBindings": {
+        "orgFilter": [{
+          "event": "change",
+          "action": "hide",
+          "query": "id=0"
+        }, {
+          "event": "change",
+          "action": "show",
+          "query": "id!=0"
+        }]
+      },
+      "widgetProperties" : {
+        "hidden": "true"
+      },
+      "widgetType" : "SimpleContainer"
+    },
     "managedFacilitiesList": {
       "container": "simpleContainer",
-      "index" : 1.1,
+      "index" : 3.1,
       "widgetData" : {},
       "widgetProperties" : {
         "tagName": "p",
@@ -36,27 +136,28 @@
     },
     "showFacilitiesWithoutMarkup": {
       "container": "simpleContainer",
-      "index" : 1.4,
+      "index" : 3.4,
       "widgetData" : {},
       "widgetProperties" : {
-        "label": "Show Facilities without Markup"
+        "label": "Show Facilities without Markup",
+        "baseClass": "button-default"
       },
       "widgetType" : "Button"
     },
     "createMarkup": {
       "container": "simpleContainer",
-      "index" : 1.3,
+      "index" : 3.3,
       "widgetData" : {},
       "widgetProperties" : {
         "iconClass": "glyphicon glyphicon-plus",
-        "label": "Create Markup",
+        "label": "Create New Markup",
         "baseClass": "button-default"
       },
       "widgetType" : "Button"
     },
     "showFilters": {
       "container": "simpleContainer",
-      "index" : 1.2,
+      "index" : 3.2,
       "widgetData" : {},
       "widgetProperties" : {
         "label": "Show Filters",
@@ -76,7 +177,7 @@
     },
     "hideFilters": {
       "container": "simpleContainer",
-      "index" : 1.2,
+      "index" : 3.2,
       "widgetData" : {},
       "widgetProperties" : {
         "hidden": "true",
@@ -96,7 +197,7 @@
       "widgetType" : "Button"
     },
     "container2": {
-      "index" : 2,
+      "index" : 4,
       "widgetData" : {},
       "widgetProperties" : {
         "hidden": "true"
@@ -115,7 +216,7 @@
     },
     "entityCode": {
       "container": "container2",
-      "index": 2.1,
+      "index": 4.1,
       "widgetProperties": {
         "promptLabel": "Entity Code"
       },
@@ -127,7 +228,7 @@
     },
     "facility": {
       "container": "container2",
-      "index": 2.2,
+      "index": 4.2,
       "widgetProperties": {
         "promptLabel": "Facility"
       },
@@ -138,7 +239,8 @@
       "widgetType": "Select"
     },
     "distributor": {
-      "container": "container2", "index": 2.3,
+      "container": "container2",
+      "index": 4.3,
       "widgetProperties": {
         "promptLabel": "Distributor"
       },
@@ -150,7 +252,7 @@
     },
     "clear": {
       "container": "container2",
-      "index" : 2.5,
+      "index" : 4.5,
       "widgetData" : {},
       "widgetProperties" : {
         "label": "Clear"
@@ -159,7 +261,7 @@
     },
     "filterButton": {
       "container": "container2",
-      "index" : 2.4,
+      "index" : 4.4,
       "widgetData" : {},
       "widgetProperties" : {
         "label": "Filter",
@@ -167,14 +269,25 @@
       },
       "widgetType" : "Button"
     },
+
     "managedFacilitiesListGrid": {
-      "index" : 3,
+      "index" : 4,
       "widgetData" : {
         "fixtureUrl": "scripts/dmmapp/models/fixtures/ag-grid-data-${orgFilter.id}.json",
         "fixtures": true,
         "serviceUrl": "services/your/service/here"
       },
-
+      "widgetBindings": {
+        "orgFilter": [{
+          "event": "change",
+          "action": "hide",
+          "query": "id=0"
+        }, {
+          "event": "change",
+          "action": "show",
+          "query": "id!=0"
+        }]
+      },
       "widgetProperties" : {
         "components": ["editMarkUp"],
         "gridOptions": {
@@ -191,39 +304,39 @@
               "field": "Entity Code",
               "cellClass": "hyperlink",
               "sortable": true,
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "Facility",
               "field": "Facility",
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "Distributor",
               "field": "Distributor",
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "Start Date",
               "field": "Start Date",
               "sortable": true,
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "End Date",
               "field": "End Date",
               "sortable": true,
-              "resizable": true
+              "resizable": false
             },
             {
               "headerName": "Markup",
               "field": "Markup",
               "sortable": true,
-              "resizable": true
+              "resizable": false
             },
             {
             "headerName": "",
-            "field": "button",
+            "field": "Editbutton",
             "cellRenderer": "editMarkUp"
             }
           ]
